[package]
name = "hvb-batterystack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7", features = [] }
embedded-hal = "0.2.7"
defmt = "0.3"
defmt-rtt = "0.4"
lilos = "0.3.6"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
stm32l4xx-hal = { version = "0.7.1", features = ["stm32l433"] }
